--- a/index.html
+++ b/index.html
@@ -1,30 +1,53 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-
-.small-width {width:100px; height:50px; color:yellow; background:grey; font-family: lobster, cursive;}
-
-</style>
-
+<html lang="en">
 <head>
-<center><h1>WELCOME TO HOTEL PRIME VENOM</h1></center>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HOTEL BOOKING WEBSITE</title>
 </head>
-
+<link rel="stylesheet" href="css/style.css">
+<style>
+    /* CSS RESET */
+    body{
+        color:white;
+        margin:0px;
+        padding: 0px;
+        background: url('img/bg.jpg');
+    }
+    .left{
+        display:inline-block;
+        border: 2px solid red;
+        position: absolute;
+        left: 34px;
+        top: 20px;
+    }
+    .right{
+        position: absolute;
+        right: 34px;
+        top: 20px;
+        width: 60%;
+        border: 2px solid green;
+    }
+</style>
 <body>
-
-<center><b>
-<a href="https://lms.jspmrscoe.edu.in/"> <button type="button" class="small-width"> Contact Us ! </button> </a> &emsp;&emsp;&emsp;
-<button type="button" class="small-width">Booking</button> &emsp;&emsp;&emsp;
-<button type="button" class="small-width">Admin Login</button>
-</b></center>
-<br>
-<center><img src="https://c4.wallpaperflare.com/wallpaper/350/994/525/hotel-galaxy-macau-hong-kong-china-desktop-hd-wallpaper-2560%C3%971600-wallpaper-preview.jpg" alt="HOTEL"></center>
-<p><center>
-<textarea name=box cols="x" rows="y"></textarea>
-<i>CLICK <a href="C:/Users/Neeta/Desktop/IMP%20DOCS%20(DON'T%20DELETE)/code/welcome-to-hotel-pride-venom-html/index.html"> HERE </a></i>
-</center></p>
-
-
-
+    <header class="header">
+        <!--Left box welcome and logo-->
+        <div class="left">
+WELCOME          
+        </div>
+        <!--right for navigation-->
+        <div class="right">
+            <ul class="navbar">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Rooms</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Feedback</a></li>
+            </ul>
+        </div>
+        
+    </header>
 </body>
-</meta>
+</html>
