--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         color:white;
         margin:0px;
         padding: 0px;
-        background: url('img/bg.jpg');
+        background: url('https://pixabay.com/photos/the-palm-atlantis-hotel-dubai-962785/');
     }
     .left{
         display:inline-block;
