--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         color:white;
         margin:0px;
         padding: 0px;
-        background: url('https://pixabay.com/photos/the-palm-atlantis-hotel-dubai-962785/');
+        background: url('https://cdn.pixabay.com/photo/2015/09/28/21/32/the-palm-962785_960_720.jpg');
     }
     .left{
         display:inline-block;
