--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         color:white;
         margin:0px;
         padding: 0px;
-        background: url('https://cdn.pixabay.com/photo/2015/09/28/21/32/the-palm-962785_960_720.jpg');
+        background: url('https://images.wallpapersden.com/image/download/las-vegas-night-hotel_Zmxtbm6UmZqaraWkpJRmaGtrrWxrbQ.jpg');
     }
     .left{
         display:inline-block;
