--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <link rel="stylesheet" href="css/style.css">
 <style>
     /* CSS RESET */
-    body{
+    .body{
         color:white;
         margin:0px;
         padding: 0px;
-        background: url(https://images.wallpapersden.com/image/download/las-vegas-night-hotel_Zmxtbm6UmZqaraWkpJRmaGtrrWxrbQ.jpg);
+        background: url('https://images.wallpapersden.com/image/download/las-vegas-night-hotel_Zmxtbm6UmZqaraWkpJRmaGtrrWxrbQ.jpg');
     }
     .left{
         display:inline-block;
@@ -30,7 +30,7 @@
         border: 2px solid green;
     }
 </style>
-<body>
+<body class="body">
     <header class="header">
         <!--Left box welcome and logo-->
         <div class="left">
