--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         color:white;
         margin:0px;
         padding: 0px;
-        background: url('https://images.wallpapersden.com/image/download/las-vegas-night-hotel_Zmxtbm6UmZqaraWkpJRmaGtrrWxrbQ.jpg');
+        background: url('../resources/hotel-2563.jpg');
     }
     .left{
         display:inline-block;
