--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         color:white;
         margin:0px;
         padding: 0px;
-        background: url('../resources/hotel-2563.jpg');
+        background: url('https://github.com/adityabindu/Hotel-Booking-Site/blob/main/resources/hotel-2563.jpg');
     }
     .left{
         display:inline-block;
