--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>HOTEL BOOKING WEBSITE</title>
 </head>
 <link rel="stylesheet" href="css/style.css">
-<link rel="background" href="./hotel-2563.jpg" type="image">
+<link rel="background" href="./palm-hotel.jpg" type="image">
 <style>
     /* CSS RESET */
     .body{
         color:white;
         margin:0px;
         padding: 0px;
-        background: url('./hotel-2563.jpg');
+        background: url('./palm-hotel.jpg');
     }
     .left{
         display:inline-block;
