--- a/index.html
+++ b/index.html
@@ -1,54 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOTEL BOOKING WEBSITE</title>
+    <title>hotel booking website</title>
 </head>
-<link rel="stylesheet" href="css/style.css">
-<link rel="background" href="./palm-hotel.jpg" type="image">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
+<link rel="background" href="./hotel-2563.jpg" type="image">
+<!--link rel="stylesheet" href="css/style.css"-->
+
 <style>
-    /* CSS RESET */
-    .body{
-        color:white;
-        margin:0px;
+    /* CSS Reset*/
+    body {
+        font-family: 'Poppins', sans-serif;
+        color: white;
+        margin: 0px;
         padding: 0px;
-        background: url('./palm-hotel.jpg');
+        min-height: 100vh;
+        width: 100%;
+        background: url(hotel-2563.jpg);
+        background-position: center;
+        background-size: cover;
+        position: relative;
     }
-    .left{
-        display:inline-block;
+
+    .left {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        display: inline-block;
         border: 2px solid red;
-        position: absolute;
-        left: 34px;
-        top: 20px;
     }
-    .right{
+
+    .left img {
+        width: 170px;
+    }
+
+    .left div {
+        text-align: center;
+    }
+
+    .nav-links {
         position: absolute;
-        right: 34px;
-        top: 20px;
-        width: 60%;
+        right: 0px;
+        top: 0px;
+        display: inline-block;
         border: 2px solid green;
+
+    }
+
+    .navbar {
+        display: inline-block;
+        font-family: 'Otomanopee One', sans-serif;
+
+    }
+
+    .navbar li {
+        color: white;
+        display: inline-block;
+        font-size: 25px;
+    }
+
+    .navbar li a {
+        color: white;
+        text-decoration: none;
+        padding: 34px;
+
+    }
+
+    .nav-links ul li::after {
+        content: '';
+        width: 0px;
+        height: 2px;
+        background: red;
+        display: block;
+        margin: auto;
+        transition: 0.5s;
+    }
+
+    .nav-links ul li:hover::after {
+        width: 100%;
+    }
+
+    .text-box {
+        font-family: 'Hammersmith One', sans-serif;
+        border: rgb(247, 4, 4);
+        width: 90%;
+        color: rgb(0, 0, 0);
+        position: absolute;
+        top: 20%;
+        left: 3%;
+        /* transform: translate(-50%, -50%); */
+        text-align: left;
+        /* padding-left: 5px; */
+    }
+
+    .text-box {
+        font-size: 35px;
+    }
+
+    .hero-btn {
+        display: inline-block;
+        text-decoration: none;
+        color: white;
+        border: 3px solid rgb(211, 22, 85);
+        padding: 12px 34px;
+        font-size: 18px;
+        background: transparent;
+        position: relative;
+        cursor: pointer;
+        font-family: 'Zen Tokyo Zoo', cursive;
+
+    }
+
+    .hero-btn:hover {
+        border: 1px solid orange;
+        background: orange;
+        transition: 1s;
     }
 </style>
-<body class="body">
+
+<body>
     <header class="header">
-        <!--Left box welcome and logo-->
+        <!--left box for logo-->
         <div class="left">
-WELCOME          
+            <img src="img/LOGO.png" alt="">
+
+
         </div>
-        <!--right for navigation-->
-        <div class="right">
+        <!--right box for buttons-->
+        <div class="nav-links">
             <ul class="navbar">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Rooms</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">Feedback</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Photos.html">Photos</a></li>
+                <li><a href="Services.html">Services</a></li>
+                <li><a href="Rooms.html">Rooms</a></li>
+                <li><a href="About-Us.html">About Us</a></li>
             </ul>
+
         </div>
-        
+        <div class="text-box">
+            <h1>Spend Quality<br> 
+                Holidays With Us</h1>
+            <a href="" class="hero-btn"><strong>BOOK NOW</strong></a>
+        </div>
+
     </header>
+
+
 </body>
+
 </html>
