--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hotel booking website</title>
+    <title>Hotel Midtown Majestic</title>
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
         padding: 0px;
         min-height: 100vh;
         width: 100%;
-        background: url(hotel-2563.jpg);
+        background: url(./hotel-2563.jpg);
         background-position: center;
         background-size: cover;
         position: relative;
@@ -131,10 +131,9 @@
     <header class="header">
         <!--left box for logo-->
         <div class="left">
-            <img src="img/LOGO.png" alt="">
-
-
+            <img src="./LOGO.png" alt="Midtow-Majestic-Logo">     
         </div>
+    </header>    
         <!--right box for buttons-->
         <div class="nav-links">
             <ul class="navbar">
@@ -149,7 +148,7 @@
         <div class="text-box">
             <h1>Spend Quality<br> 
                 Holidays With Us</h1>
-            <a href="" class="hero-btn"><strong>BOOK NOW</strong></a>
+            <a href="./hotel-form.html" target="_blank" class="hero-btn"><strong>BOOK NOW</strong></a>
         </div>
 
     </header>
