--- a/hotel-form.html
+++ b/hotel-form.html
@@ -23,7 +23,7 @@
             padding: 0px;
             min-height: 100vh;
             width: 100%;
-            background: url(hotel-2563.jpg);
+            background: url(./hotel-2563.jpg);
             background-position: center;
             background-size: cover;
             position: relative;
@@ -181,7 +181,7 @@
     <header class="header">
         <!--left box for logo-->
         <div class="left">
-            <img src="logo.png" transperant alt="Midtown-Majestic">
+            <img src="./LOGO.png" transperant alt="Midtown-Majestic">
         </div>
     </header>
     <h2 class="hotel-name">Hotel Midtown Majestic</h2>
