--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         left: 0px;
         top: 0px;
         display: inline-block;
-        border: 2px solid red;
+        border: 2px transperant;
     }
 
     .left img {
