--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Midtown Majestic</title>
+    <link rel="icon" href="./LOGO.png" type="image/x-icon">
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -149,10 +150,11 @@
                 Holidays With Us</h1>
             <a href="./hotel-form.html" target="_blank" class="hero-btn"><strong>BOOK NOW</strong></a>
         </div>
-
-    </header>
-
-
+    
+       <div id="footer">
+       <footer>&nbsp; &copy; EDD PROJECT (GROUP 5)</footer>
+       </div>
+    
 </body>
 
 </html>
