--- a/hotel-form.html
+++ b/hotel-form.html
@@ -185,7 +185,7 @@
         </div>
     </header>
     <h2 class="hotel-name">Hotel Midtown Majestic</h2>
-    <form action="" class="text-box">
+    <form action="./hotel-thank.html" class="text-box">
         <div>
             <label for="name">NAME </label>
             <input type="text" name="myname" id="name" class="input" placeholder="Your Name Here.." required>
