--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
         background: orange;
         transition: 1s;
     }
+    #footer {
+        position: absolute;
+        margin-top: 42%;
+        padding-bottom: 10px;
+        /* padding-left: 5px; */
+        width: 100%;
+        /* height: 6px; */
+        background: transparent;
+        font-weight: bold;
+    }
 </style>
 
 <body>
