--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Photos.html">Photos</a></li>
                 <li><a href="Services.html">Services</a></li>
-                <li><a href="Rooms.html">Rooms</a></li>
+                <li><a href="./hotel-rooms.html">Rooms</a></li>
                 <li><a href="About-Us.html">About Us</a></li>
             </ul>
 
