--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -75,6 +75,7 @@
         margin-bottom: 5%;
         /* padding: 20px 12px; */
         padding-right: 10px;
+        padding-left: 10px;
         box-sizing: border-box;
         /* transition: 0.5s; */
     }
