--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -64,6 +64,7 @@
         justify-content: space-between;
         padding-left: 70px;
         padding-right: 70px;
+        column-gap: 20px;
     }
 
     .Rooms-col {
