--- a/hotel-form.html
+++ b/hotel-form.html
@@ -226,10 +226,9 @@
             <label for="roomtype">SELECT ROOM TYPE </label>
             <select name="myroomtype" id="roomtype" class="input" required>
                 <option value="" disabled selected hidden>Select Room..</option>
-                <option value="DELUXE">DELUXE</option>
-                <option value="SUPER-DELUXE">SUPER DELUXE</option>
-                <option value="KINGS-SUITE">KINGS SUITE</option>
-                <option value="SUPREME-SUITE">SUPREME SUITE</option>
+                <option value="DELUXE-ROOM">DELUXE ROOM</option>
+                <option value="SUPREME-ROOM">SUPREME ROOM</option>
+                <option value="KINGS-SUITE">KING'S SUITE</option>
             </select>
         </div><br><br>
 
