--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
         <div class="nav-links">
             <ul class="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Photos.html">Photos</a></li>
+                <li><a href="./hotel-photos.html">Photos</a></li>
                 <li><a href="Services.html">Services</a></li>
                 <li><a href="./hotel-rooms.html">Rooms</a></li>
-                <li><a href="About-Us.html">About Us</a></li>
+                <li><a href="./hotel-About_Us.html">About Us</a></li>
             </ul>
 
         </div>
