--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <ul class="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="./hotel-photos.html">Photos</a></li>
-                <li><a href="Services.html">Services</a></li>
+                <li><a href="./hotel-services.html">Services</a></li>
                 <li><a href="./hotel-rooms.html">Rooms</a></li>
                 <li><a href="./hotel-About_Us.html">About Us</a></li>
             </ul>
