--- a/hotel-services.html
+++ b/hotel-services.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rooms : Midtown Majestic</title>
+    <title>Services : Midtown Majestic</title>
     <link rel="icon" href="./LOGO.png" type="image/x-icon">
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
