--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         right: 0px;
         top: 0px;
         display: inline-block;
-        border: 2px solid green;
-
+        
     }
 
     .navbar {
@@ -91,7 +90,7 @@
 
     .text-box {
         font-family: 'Hammersmith One', sans-serif;
-        border: rgb(247, 4, 4);
+        border: rgb(207, 135, 135);
         width: 90%;
         color: rgb(0, 0, 0);
         position: absolute;
@@ -109,20 +108,21 @@
     .hero-btn {
         display: inline-block;
         text-decoration: none;
-        color: white;
-        border: 3px solid rgb(211, 22, 85);
+        color: rgb(32, 27, 27);
+        border: 3px solid rgb(199, 99, 41);
         padding: 12px 34px;
         font-size: 18px;
-        background: transparent;
+        background: rgb(199, 99, 41);
         position: relative;
         cursor: pointer;
         font-family: 'Zen Tokyo Zoo', cursive;
+        border-radius: 30px;
 
     }
 
     .hero-btn:hover {
         border: 1px solid orange;
-        background: orange;
+        background: rgb((216, 189, 142)5, 229, 199);
         transition: 1s;
     }
     #footer {
