--- a/index.html
+++ b/index.html
@@ -98,14 +98,16 @@
         top: 20%;
         left: 3%;
         /* transform: translate(-50%, -50%); */
-        text-align: left;
-        /* padding-left: 5px; */
+        text-align: center(50% left);
+        padding-left: 5px;
+        background-color: transparent;
     }
 
     .text-box {
         font-size: 35px;
         font-display: inherit;
         text-shadow : 10mm;
+        border-bottom: 4px solid black;
         
         color: rgb(227, 178, 88);
         border-color: black;
@@ -126,6 +128,7 @@
         cursor: pointer;
         font-family: 'Zen Tokyo Zoo', cursive;
         border-radius: 30px;
+        box-shadow: 3px;
 
     }
 
