--- a/hotel-thank.html
+++ b/hotel-thank.html
@@ -29,6 +29,73 @@
         background-size: cover;
         position: relative;
     }
+    h2 {
+        /* margin-top: 100px; */
+        padding-top: 100px;
+        color: white;
+        text-align: center;
+        font-family: 'Rye', cursive;
+        font-size: 25px;
+    }
+    .left {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        display: inline-block;
+    }
+
+    .left img {
+        width: 170px;
+    }
+
+    .left div {
+        text-align: center;
+    }
+
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        top: 0px;
+        display: inline-block;
+        
+    }
+
+    .navbar {
+        display: inline-block;
+        font-family: 'Otomanopee One', sans-serif;
+
+    }
+
+    .navbar li {
+        color: rgb(232, 67, 67);
+        display: inline-block;
+        font-size: 25px;
+    }
+
+    .navbar li a {
+        color: rgb(10, 10, 10);
+        border: 25px;
+        text-decoration: none;
+        padding: 25px;
+
+    }
+
+    .nav-links ul li::after {
+        content: '';
+        width: 0px;
+        height: 2px;
+        background: red;
+        display: block;
+        margin: auto;
+        transition: 0.5s;
+    }
+
+    .nav-links ul li:hover::after {
+        width: 100%;
+    }
+
+
+
 
     .thank-box {
         background-color: rgba(119, 178, 255, 0.75);
@@ -51,6 +118,24 @@
 </style>
 
 <body>
+    <header class="header">
+        <!--left box for logo-->
+        <div class="left">
+            <img src="./LOGO.png" alt="Midtow-Majestic-Logo">     
+        </div>
+    </header>    
+        <!--right box for buttons-->
+        <div class="nav-links">
+            <ul class="navbar">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./hotel-photos.html">Photos</a></li>
+                <li><a href="./hotel-services.html">Services</a></li>
+                <li><a href="./hotel-rooms.html">Rooms</a></li>
+                <li><a href="./hotel-About_Us.html">About Us</a></li>
+            </ul>
+
+        </div>
+
     <div class="thank-box">
         <p>THANK YOU FOR REGISTRATION !<br>
             WE WILL GET BACK<br>
