--- a/hotel-form.html
+++ b/hotel-form.html
@@ -30,62 +30,61 @@
         }
 
         .left {
-            position: absolute;
-            left: 5px;
-            top: 0px;
-            display: inline-block;
-            border: 2px transparent
-        }
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        display: inline-block;
+    }
 
-        .left img {
-            width: 170px;
-        }
+    .left img {
+        width: 170px;
+    }
 
-        .left div {
-            text-align: center;
-        }
+    .left div {
+        text-align: center;
+    }
 
-        .nav-links {
-            position: absolute;
-            right: 0px;
-            top: 0px;
-            display: inline-block;
-            border: 2px solid green;
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        top: 0px;
+        display: inline-block;
+        
+    }
 
-        }
+    .navbar {
+        display: inline-block;
+        font-family: 'Otomanopee One', sans-serif;
 
-        .navbar {
-            display: inline-block;
-            font-family: 'Otomanopee One', sans-serif;
+    }
 
-        }
+    .navbar li {
+        color: rgb(232, 67, 67);
+        display: inline-block;
+        font-size: 25px;
+    }
 
-        .navbar li {
-            color: white;
-            display: inline-block;
-            font-size: 25px;
-        }
+    .navbar li a {
+        color: rgb(10, 10, 10);
+        border: 25px;
+        text-decoration: none;
+        padding: 25px;
 
-        .navbar li a {
-            color: white;
-            text-decoration: none;
-            padding: 34px;
+    }
 
-        }
+    .nav-links ul li::after {
+        content: '';
+        width: 0px;
+        height: 2px;
+        background: red;
+        display: block;
+        margin: auto;
+        transition: 0.5s;
+    }
 
-        .nav-links ul li::after {
-            content: '';
-            width: 0px;
-            height: 2px;
-            background: red;
-            display: block;
-            margin: auto;
-            transition: 0.5s;
-        }
-
-        .nav-links ul li:hover::after {
-            width: 100%;
-        }
+    .nav-links ul li:hover::after {
+        width: 100%;
+    }
 
         .text-box {
             background-color: rgba(119, 178, 255, 0.75);
@@ -165,6 +164,8 @@
         }
 
         .hotel-name {
+            justify-content: center;
+            padding-top: 40px;
             font-size: 35px;
             font-weight: bold;
             position: absolute;
@@ -181,9 +182,20 @@
     <header class="header">
         <!--left box for logo-->
         <div class="left">
-            <img src="./LOGO.png" transperant alt="Midtown-Majestic">
+            <img src="./LOGO.png" alt="Midtow-Majestic-Logo">     
         </div>
-    </header>
+    </header>    
+        <!--right box for buttons-->
+        <div class="nav-links">
+            <ul class="navbar">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./hotel-photos.html">Photos</a></li>
+                <li><a href="./hotel-services.html">Services</a></li>
+                <li><a href="./hotel-rooms.html">Rooms</a></li>
+                <li><a href="./hotel-About_Us.html">About Us</a></li>
+            </ul>
+
+        </div>
     <h2 class="hotel-name">Hotel Midtown Majestic</h2>
     <form action="./hotel-thank.html" class="text-box">
         <div>
