--- a/hotel-photos.html
+++ b/hotel-photos.html
@@ -22,6 +22,62 @@
         background-position: center;
         position: relative;
     }
+    .left {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        display: inline-block;
+    }
+
+    .left img {
+        width: 170px;
+    }
+
+    .left div {
+        text-align: center;
+    }
+
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        top: 0px;
+        display: inline-block;
+        
+    }
+
+    .navbar {
+        display: inline-block;
+        font-family: 'Otomanopee One', sans-serif;
+
+    }
+
+    .navbar li {
+        color: rgb(232, 67, 67);
+        display: inline-block;
+        font-size: 25px;
+    }
+
+    .navbar li a {
+        color: rgb(10, 10, 10);
+        border: 25px;
+        text-decoration: none;
+        padding: 25px;
+
+    }
+
+    .nav-links ul li::after {
+        content: '';
+        width: 0px;
+        height: 2px;
+        background: red;
+        display: block;
+        margin: auto;
+        transition: 0.5s;
+    }
+
+    .nav-links ul li:hover::after {
+        width: 100%;
+    }
 
     .row {
         display: flex;
@@ -64,6 +120,7 @@
         padding: 10px;
         padding-bottom: 10px;
         text-align: center;
+        padding-top: 100px;
     }
 
     .cover {
@@ -80,11 +137,26 @@
 </style>
 
 <body>
-    <header>
-        <div>
-            <h2 class="name">Midtown Majestic Photo Gallery</h2>
+    <header class="header">
+        <!--left box for logo-->
+        <div class="left">
+            <img src="./LOGO.png" alt="Midtow-Majestic-Logo">     
         </div>
-    </header>
+    </header>    
+        <!--right box for buttons-->
+        <div class="nav-links">
+            <ul class="navbar">
+                <li><a href="./index.html">Home</a></li>
+                <li><a style="color: red;">Photos</a></li>
+                <li><a href="./hotel-services.html">Services</a></li>
+                <li><a href="./hotel-rooms.html">Rooms</a></li>
+                <li><a href="./hotel-About_Us.html">About Us</a></li>
+            </ul>
+
+        </div>
+    <div>
+        <h2 class="name">Midtown Majestic Photo Gallery</h2>
+    </div>
     <div class="row cover">
         <div class="column">
             <img src="gal1 (1).jpg" class="size">
