--- a/index.html
+++ b/index.html
@@ -138,14 +138,18 @@
         transition: 1s;
     }
     #footer {
+        justify-content: center;
+        text-align: center;
         position: absolute;
-        margin-top: 45%;
+        margin-top: 50%;
         padding-bottom: 40px;
         /* padding-left: 5px; */
         width: 100%;
         /* height: 6px; */
         background: transparent;
         font-weight: bold;
+        position:absolute;
+        bottom:0;
     }
 </style>
 
@@ -159,7 +163,7 @@
         <!--right box for buttons-->
         <div class="nav-links">
             <ul class="navbar">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="" style="color: red;">Home</a></li>
                 <li><a href="./hotel-photos.html">Photos</a></li>
                 <li><a href="./hotel-services.html">Services</a></li>
                 <li><a href="./hotel-rooms.html">Rooms</a></li>
