--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 <li><a href="./hotel-services.html">Services</a></li>
                 <li><a href="./hotel-rooms.html">Rooms</a></li>
                 <li><a href="./hotel-About_Us.html">About Us</a></li>
+                <li><a href="./hotel-contact-Us.html">contact Us</a></li>
             </ul>
 
         </div>
