--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     .hero-btn {
         display: inline-block;
         text-decoration: none;
-        color: rgb(230, 232, 140);
+        color: green;
         box-shadow: inset;
         border: 3px solid rgb(247, 242, 239);
         padding: 12px 34px;
@@ -138,16 +138,16 @@
         transition: 1s;
     }
     #footer {
+        background-color: rgba(255, 255, 255, 0.4);
         justify-content: center;
         text-align: center;
         position: absolute;
-        margin-top: 50%;
-        padding-bottom: 40px;
+        padding-top: 20px;
+        padding-bottom: 20px;
         /* padding-left: 5px; */
         width: 100%;
         /* height: 6px; */
-        background: transparent;
-        font-weight: bold;
+        font-weight: bolder;
         position:absolute;
         bottom:0;
     }
@@ -177,7 +177,7 @@
             <a href="./hotel-form.html" target="_blank" class="hero-btn"><strong>BOOK NOW</strong></a>
         </div>
     
-       <div id="footer">
+       <div id="footer" class="footer">
        <footer>&nbsp; &copy; @Copyright2021</footer>
        </div>
     
