--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
         position:absolute;
         bottom:0;
     }
+    .hoverPointer{
+        cursor: pointer;
+    }
 </style>
 
 <body>
@@ -174,11 +177,11 @@
         <div class="text-box">
             <h1>Spend Quality<br> 
                 Holidays With Us</h1>
-            <a href="./hotel-form.html" target="_blank" class="hero-btn"><strong>BOOK NOW</strong></a>
+            <a href="./hotel-form.html" target="_blank" class="hero-btn hoverPointer"><strong>BOOK NOW</strong></a>
         </div>
     
        <div id="footer" class="footer">
-       <footer>&nbsp; &copy; @Copyright2021</footer>
+       <footer><span class="hoverPointer">&nbsp; &copy; @Copyright2021</span></footer>
        </div>
     
 </body>
